[package]
name = "dam-torch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = {version = "0.14.0", features=["download-libtorch"]}
dam = {version = "0.1.0", features=["dot"], default-features=false, git = "https://github.com/stanford-ppl/DAM-RS.git", branch="dev"}
tempfile = "3.8.1"
thiserror = "1.0.50"
fxhash = "0.2.1"
dashmap = "5.5.3"
derive-new = "0.5.9"
crossbeam = "0.8.2"
